--- a/semrush/manifest.json
+++ b/semrush/manifest.json
@@ -1,50 +1,40 @@
 {
 "manifest_version": 1,
 "version": "1.0.0",
-"short_name": "PWA Esempio",
-"name": "sitoweb.it",
-"description": "La mia prima Progressive Web Application.",
+"short_name": "Red Pill",
+"name": "Red Pill Magazine",
+"description": "Red Pill Magazine: la vostra pillola rossa.",
 "icons": [
 {
-"src": "/PWA/images/512x512.png",
+"src": "/images/iconewpa/512x512px.png",
 "sizes": "512x512",
 "type": "image/png"
 },
 {
-"src": "/PWA/images/384x384.png",
+"src": "/images/iconewpa/384x384px.png",
 "sizes": "384x384",
 "type": "image/png"
 },
 {
-"src": "/PWA/images/192x192.png",
+"src": "/images/iconewpa/256x256px.png",
+"sizes": "256x256",
+"type": "image/png"
+},
+  {
+"src": "/images/iconewpa/192x192px.png",
 "sizes": "192x192",
 "type": "image/png"
 },
 {
-"src": "/PWA/images/152x152.png",
+"src": "/images/iconewpa/152x152px.png",
 "sizes": "152x152",
 "type": "image/png"
 },
 {
-"src": "/PWA/images/144x144.png",
+"src": "/images/iconewpa/144x144px.png",
 "sizes": "144x144",
 "type": "image/png"
 },
-{
-"src": "/PWA/images/128x128.png",
-"sizes": "128x128",
-"type": "image/png"
-},
-{
-"src": "/PWA/images/96x96.png",
-"sizes": "96x96",
-"type": "image/png"
-},
-{
-"src": "/PWA/images/72x72.png",
-"sizes": "72x72",
-"type": "image/png"
-}
 ],
 "start_url": ".", 
 "lang": "it-IT",
